# evidence-factory

./: .gitignore  AGENTS.md  CODEOWNERS  LICENSE  README.md  index.html  presentation.html  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
.cursor/rules/: 01-evidence-factory-core.mdc  02-workflow.mdc  03-change-policy.mdc
.github/: .copilot-instructions.md
.github/workflows/: evidence-factory.yml
docs/: architecture-diagram.html  data-governance.md  human-oversight.md  intended-purpose.md  risk-notes.md  traceability.md
governance/: data-governance.json  human-oversight.json  intended-purpose.json  risk-notes.json  traceability.json
policy/: evidence.rego  evidence_test.rego
scripts/: make_evidence_pack.py  run_policy_gate.py
src/: eval.py  train.py
src/evidence_factory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_make_evidence_pack.py
