[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evidence-factory"
version = "0.1.0"
description = "Proof-of-concept evidence factory for ML systems: governance requirements into machine-verifiable evidence and policy-as-code in CI."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = []
keywords = ["evidence", "governance", "ml", "policy-as-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest",
    "ruff",
]
